--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,35 @@ img {
   height: 200px;
   color: rgb(255, 255, 255);
 }
+
+.imgs-hol {
+  width: 150px;
+  height: 150px;
+  border: 2px #3882F6 solid;
+  border-radius: 10px;
+}
+
+.random-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.subtext-pic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.subtext {
+  display: flex;
+  justify-content: center;
+  gap: 22px;
+}
+
+.subtext-text {
+  width: 150px;
+}
