--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,14 @@ img {
 .subtext-text {
   width: 150px;
 }
+.quote {
+  background-color: #E5E7EB;
+  font-size: 36px;
+  font-style: italic;
+  text-align: center;
+}
+
+.quote-container {
+  padding: 200px;
+  display: flex;
+}
