--- a/css/style.css
+++ b/css/style.css
@@ -126,13 +126,30 @@ img {
   width: 150px;
 }
 .quote {
-  background-color: #E5E7EB;
+  flex-wrap: wrap;
   font-size: 36px;
+  width: 800px;
+  display: flex;
   font-style: italic;
-  text-align: center;
+  font-weight:lighter;
 }
 
 .quote-container {
-  padding: 200px;
   display: flex;
+  background-color: #E5E7EB;
+  padding: 100px;
+  margin-top: 100px;
+  justify-content: center;
+  align-items: center;
+}
+
+.credit {
+  font-weight: 1000;
+  width: 200px;
+}
+
+.inside-quote {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
